--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@remix-run/node": "^2.11.2",
     "@remix-run/react": "^2.11.2",
     "@remix-run/serve": "^2.11.2",
+    "axios": "^1.7.5",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.11.2",
